syntax = "proto3";
package protos;
option go_package = "gfs/chunkserver/protos";

service ChunkServer {
  // Reads a range of bytes in a chunk.
  rpc Read(ReadRequest) returns (ReadReply) {}
  // Receive potential write data from clients.
  rpc ReceiveWriteData(WriteDataBundle) returns (Ack) {}
  // Commits a mutation operation on primary.
  rpc PrimaryCommitMutate(ChunkHandle) returns (Ack) {}
  // Commits a mutation operation on secondary.
  rpc SecondaryCommitMutate(ChunkHandle) returns (Ack) {}
  // Creates a new chunk.
  rpc CreateNewChunk(ChunkHandle) returns (Ack) {}
}

// The reply message containing the data from a file read.
message ReadReply {
  string data = 1;
}

// The request message containing the arguments to a read request.
message ReadRequest {
  uint64 ch = 1;
  int32 l = 2;
  int32 r = 3;
}

// A message containing a chunk handle
message ChunkHandle {
  uint64 ch = 1;
}

// A reply message containing an acknowledgement
message Ack {
  string msg = 1;
}

// A request message containing potential mutation data from clients.
message WriteDataBundle {
  bytes data = 1;
  int64 size = 2;
  uint64 ch = 3;
  repeated string chunkServers = 4;
}

